--- a/style.css
+++ b/style.css
@@ -1,1 +1,248 @@
+/* variables */
+:root {
+    --Moderate-violet: hsl(263, 55%, 52%);
+    --Very-dark-grayish-blue: hsl(217, 19%, 35%);
+    --Very-dark-blackish-blue: hsl(219, 29%, 14%);
+    --Light-gray: hsl(0, 0%, 81%);
+    --Light-grayish-blue: hsl(210, 46%, 95%);
+}
 
+/* Global Rules-start */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    /* .barlow-semi-condensed */
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-size: 13px;
+    background-color: #eee;
+    position: relative;
+
+}
+
+h1,
+h2,
+h3 {
+    font-weight: unset;
+}
+
+
+
+
+/* screen sizes-start */
+
+/* Small */
+@media (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+/* Medium */
+@media (min-width: 992px) {
+    .container {
+        width: 992px;
+    }
+}
+
+/* Large */
+@media (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
+/* screen sizes-end */
+
+/* Main Components */
+.container {
+    padding: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin: auto;
+    justify-content: center;
+
+
+
+}
+
+/* Global Rules-end */
+
+/* Special Rules-start */
+.container>div {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 10px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    line-height: 1.4;
+}
+
+.one {
+    background-color: var(--Moderate-violet);
+    color: var(--Light-grayish-blue);
+    position: relative;
+    z-index: 0;
+
+}
+
+
+.one img.q {
+    position: absolute;
+    top: 25px;
+    right: 61px;
+
+}
+
+.two {
+
+    background-color: var(--Very-dark-grayish-blue);
+    color: var(--Light-grayish-blue);
+}
+
+.three {
+    background-color: hsl(0, 0%, 100%);
+    color: var(--Very-dark-grayish-blue);
+
+}
+
+.four {
+
+    background-color: var(--Very-dark-blackish-blue);
+    color: var(--Light-grayish-blue);
+}
+
+.five {
+
+
+    background-color: hsl(0, 0%, 100%);
+    color: var(--Very-dark-grayish-blue);
+}
+
+.head {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
+
+
+}
+
+.head img:not(.q) {
+    border: 2px solid white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    z-index: 2;
+}
+
+.one .head img {
+    border-color: hsl(210, 46%, 95%, 50%);
+
+}
+
+.four .head img {
+    border-color: var(--Moderate-violet);
+
+}
+
+.head>div {
+    margin: 20px;
+    z-index: 0;
+
+}
+
+.head .name,
+h2 {
+    font-weight: 600;
+
+}
+
+.one .grad,
+.two .grad,
+.four .grad {
+    color: hsl(210, 46%, 95%, 50%);
+    font-weight: 500;
+
+}
+
+.three .grad,
+.five .grad {
+    color: hsl(217, 19%, 35%, 50%);
+    font-weight: 500;
+
+}
+
+.one q,
+.two q,
+.four q {
+    color: hsl(210, 46%, 95%, 70%);
+    font-weight: 500;
+
+}
+
+.three q,
+.five q {
+    color: hsl(217, 19%, 35%, 70%);
+    font-weight: 500;
+
+}
+
+.container .body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 2;
+}
+
+.container .body h2,
+.body q {
+    margin: 0 20px 20px;
+
+
+}
+
+
+
+
+/* Special Rules-end */
+
+@media (min-width:992px) {
+    .container {
+
+        grid-template-columns: repeat(4, minmax(200px, 1fr));
+        grid-template-rows: repeat(2, minmax(200px, 1fr));
+        gap: 25px;
+        margin: auto;
+
+
+    }
+
+    .one {
+        grid-column: 1/span 2;
+
+    }
+
+
+    .four {
+        grid-area: 2/2/2/4;
+
+    }
+
+    .five {
+
+        grid-area: 1 / 4 / 3 / 4;
+
+    }
+}
